--- a/public/report-design/index.html
+++ b/public/report-design/index.html
@@ -60,22 +60,24 @@
 
 <script type="text/javascript">
   const fieldOptions = [
-    {name_en: 'hospital_name', name_th: 'ชื่อโรงพยาบาล'},
-    {name_en: 'patient_name', name_th: 'ชื่อผู้ป่วย (อังกฤษ)'},
-    {name_en: 'patient_name_th', name_th: 'ชื่อผู้ป่วย (ไทย)'},
-    {name_en: 'patient_name_en_th', name_th: 'ชื่อผู้ป่วย ไทยหรืออังกฤษ'},
-    {name_en: 'patient_hn', name_th: 'HN ผู้ป่วย'},
-    {name_en: 'patient_gender', name_th: 'เพศผู้ป่วย'},
-    {name_en: 'patient_age', name_th: 'อายุผู้ป่วย'},
-    {name_en: 'patient_rights', name_th: 'สิทธิผู้ป่วย'},
-    {name_en: 'patient_doctor', name_th: 'หมอเจ้าของไข้'},
-    {name_en: 'patient_dept', name_th: 'แผนก'},
-    {name_en: 'result', name_th: 'ผลการอ่าน'},
-    {name_en: 'report_by', name_th: 'หมอผู้อ่านผล'},
-    {name_en: 'report_datetime', name_th: 'วันเวลา'},
-    {name_en: 'scan_date', name_th: 'วันที่สแกน'},
-    {name_en: 'scan_protocol', name_th: 'ตำแหน่งที่สแกน'},
-    {name_en: 'accessionNo', name_th: 'AccessionNo'}
+  {name_en: 'hospital_name', name_th: 'ชื่อโรงพยาบาล'},
+  {name_en: 'patient_name', name_th: 'ชื่อผู้ป่วย (อังกฤษ)'},
+  {name_en: 'patient_name_th', name_th: 'ชื่อผู้ป่วย (ไทย)'},
+  {name_en: 'patient_name_en_th', name_th: 'ชื่อผู้ป่วย ไทยหรืออังกฤษ'},
+  {name_en: 'patient_hn', name_th: 'HN ผู้ป่วย'},
+  {name_en: 'patient_gender', name_th: 'เพศผู้ป่วย'},
+  {name_en: 'patient_age', name_th: 'อายุผู้ป่วย'},
+  {name_en: 'patient_birthdate', name_th: 'วันเดือนปีเกิดผู้ป่วย'},
+  {name_en: 'patient_rights', name_th: 'สิทธิผู้ป่วย'},
+  {name_en: 'patient_doctor', name_th: 'หมอเจ้าของไข้'},
+  {name_en: 'patient_dept', name_th: 'แผนก'},
+  {name_en: 'result', name_th: 'ผลการอ่าน'},
+  {name_en: 'report_by', name_th: 'หมอผู้อ่านผล'},
+  {name_en: 'report_datetime', name_th: 'วันเวลา'},
+  {name_en: 'scan_date', name_th: 'วันที่สแกน'},
+  {name_en: 'scan_protocol', name_th: 'ตำแหน่งที่สแกน'},
+  {name_en: 'scan_part', name_th: 'รายการตรวจ'},
+  {name_en: 'accessionNo', name_th: 'AccessionNo'}
   ];
 
   const A4Width = 1004;
